--- a/ NFT_preview_card_component/index.html
+++ b/ NFT_preview_card_component/index.html
@@ -4,13 +4,39 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>NTF Card</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
   <main>
     <section class="card">
-      
+      <img class="hero" src="images/image-equilibrium.jpg" alt="imagen image-equilibrium">
+      <div class="info">
+        <div class="title">
+          <h1>Equilibrium #3429</h1>
+        </div>
+          <p class="text">Our Equilibrium collection promotes balance and calm.</p>
+        <div class="price_time">
+          <div class="price_info">
+            <div class="icon_price"><img src="images/icon-ethereum.svg" alt="icon ethereun"></div>
+            <p class="price"> 0.041 ETH</p>
+          </div>
+          <div class="time_info">
+            <div class="icon_time"><img src="images/icon-clock.svg" alt="icon clock"></div>
+            <p class="time">3 days left</p>
+          </div>
+        </div>
+        <hr>
+        <div class="author">
+          <div class="avatar"></div>
+          <p class="authortext">Creation of 
+            <span>Jules Wyvern</span>
+          </p>
+        </div>
+      </div>
     </section>
   </main>
 </body>
